<resources>
    <string name="app_name">Spiżarka</string>
    <string name="shopping_list">Lista Zakupow</string>
    <string name="what_is_in_depot">Co mam w spiżarce?</string>
    <string name="add_use">Dodaj/Zużyj</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Usuń bazę</string>
    <string name="sort">Sortuj</string>
    <string name="limit">Ogranicz</string>
    <string name="depot_category">Typ</string>
    <string name="depot_title">Nazwa</string>
    <string name="depot_quantity">Ilość</string>
    <string name="barcodes">Kody kreskowe:</string>
    <string name="name">Nazwa:</string>
    <string name="category">Kategoria:</string>
    <string name="quantity">Ilość:</string>
    <string name="confirm">Zatwierdź</string>
    <string name="actualize">Aktualizuj</string>
    <string name="add_remove">Dodaj/usuń:</string>
    <string name="add_item">Dodaj produkt</string>
    <string name="add_item_end">Dodaj i zakończ</string>
    <string name="actualize_item_end">Aktualizuj i zakończ</string>
    <string name="actualize_item">Aktualizuj produkt</string>
    <string name="remove_item">Usuń produkt</string>
    <string name="remove_item_end">Usuń i zakończ</string>
    <string name="minimum_quantity">Stan min:</string>
    <string name="subtract">Odejmij</string>


    <string name="Pasta">Makaron</string>
    <string name="Can">Produkty puszkowane</string>
    <string name="Dairy">Produkty mleczne</string>
    <string name="Drinks">Napoje, kawa, herbata</string>
    <string name="Medicine">Lekarstwa</string>
    <string name="Caryopsis">Ziarna: ryż, kasza..</string>
    <string name="Frozens">Mrożonki</string>
    <string name="Sauces">Sosy</string>
    <string name="Sweets">Słodycze</string>
    <string name="Chemistry">Srodki czystości</string>
    <string name="Hygiene">Art. higieniczne</string>
    <string name="Other">Pozostałe</string>

    <string name="use">Zużyj</string>
    <string name="add">Dodaj</string>
    <string name="title_activity_settings">Settings</string>
    <string name="database_delete">Usuń bazę danych</string>
    <string name="product_found">Znaleziono produkt!</string>
    <string name="category_pasta">Makaron</string>
    <string name="category_caryopsis">Ryż, kasza, etc.</string>
    <string name="category_can">Produkty puszkowane</string>
    <string name="category_dairy">Produkty mleczne</string>
    <string name="category_drinks">Napoje, kawa, herbata</string>
    <string name="category_sweets">Słodycze</string>
    <string name="category_sauces">Sosy</string>
    <string name="category_spices">Przyprawy</string>
    <string name="category_frozens">Mrożonki</string>
    <string name="category_medicine">Lekarstwa</string>
    <string name="category_hygiene">Art. higieniczne</string>
    <string name="category_chemistry">Srodki czystosci</string>
    <string name="category_other">Pozostałe</string>
    <string name="category_powders">Mąka, cukier, sól</string>
    <string name="category_fats">Olej, masło, tłuszcze</string>
    <string name="category_all">Wszystkie kategorie</string>
    <string name="ask_before_database_delete">Operacja nieodwracalna!\n\nCzy na pewno chcesz usunąć bazę danych?</string>
    <string name="yes">TAK</string>
    <string name="no">NIE</string>
    <string name="quantity_under_zero">Podana ilość spowoduje spadek \n stanu towaru poniżej 0!</string>
    <string name="missing_item_title">Podaj nazwę produktu</string>
    <string name="missing_quantity_change">Podaj zmianę ilości produktów</string>
    <string name="missing_minimum_quantity">Podaj stan minimalny</string>
    <string name="missing_quantity">Podaj ilość produktów</string>
    <string name="new_barcode_info">Nowy kod! \n\n Dodać kod do istniejącego produktu?\n</string>
    <string name="add_barcode_to_item">Dodaj \ndo istniejącego</string>
    <string name="add_new_item">Utwórz nowy produkt</string>
    <string name="pcs">szt.</string>
    <string name="product_details">Detale produktu</string>
    <string name="give_quantity">podaj ilość</string>
    <string name="add_description">dodaj opis</string>
    <string name="give_item_title">podaj nazwę produktu</string>
    <string name="communicateAddedItemAndBarcode">Nowy item oraz kod krskowy dodane do bazy!</string>
    <string name="communicateItemUpdated">Item zauktualizowany.</string>
    <string name="by_title">po Nazwie</string>
    <string name="by_category">po Kategorii</string>
    <string name="chose_category">Wybierz Kategorię</string>
    <string name="description">Opis:</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_login">  Login</string>
    <string name="prompt_email">  Email</string>
    <string name="prompt_password">  Hasło</string>
    <string name="action_sign_in">Zaloguj/zarejestruj</string>
    <string name="action_sign_in_short">Zaloguj</string>
    <string name="error_invalid_email">Adres email jest nieprawidłowy</string>
    <string name="error_invalid_login">Login jest za krótki</string>
    <string name="error_invalid_password">Hasło jest za krótkie</string>
    <string name="error_incorrect_password">Hasło jest nieprawidłowe</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="permission_rationale">"Pozwolenia odczytu kontaktów są wymagane"
    </string>
    <string name="remember_password">Pamiętaj hasło</string>
    <string name="login">Login</string>
    <string name="spizarka_account">Spizarka Account</string>
    <string name="need_login">Podaj login</string>
    <string name="text_password_change">Zmiana hasła</string>
    <string name="new_password">Nowe hasło</string>
    <string name="confirm_new_password">Potwierdź nowe hasło</string>
    <string name="cancel">Anuluj</string>
    <string name="old_password">Stare hasło</string>
    <string name="text_new_password_dialog_alert">Hasła nie są zgodne lub są za krótkie!</string>
    <string name="account">Konto</string>
    <string name="text_account_delete">Usunięcie konta jest nieodwracalne!</string>
    <string name="text_delete_account">Usuń konto (nieodwracalnie)</string>
    <string name="text_remember_password_email">Przypomnij hasło na email</string>
    <string name="text_too_short_password">Podane hasło jest za krótkie!</string>
    <string name="delete_account">Usuń konto</string>
    <string name="database_erased">Baza została usunięta.</string>
    <string name="no_internet_connection">Brak połączenia z Internetem!</string>


</resources>
