<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/buttonMainAdd"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold|italic"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use"
        android:id="@+id/buttonMainRemove"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold|italic"
        android:layout_below="@+id/buttonMainAdd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_is_in_depot"
        android:id="@+id/buttonMainDepot"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold|italic"
        android:layout_below="@+id/buttonMainRemove"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shopping_list"
        android:id="@+id/buttonMainShoppingList"
        android:layout_below="@+id/buttonMainDepot"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_marginLeft="40dp"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold|italic"
        android:layout_marginRight="40dp"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/buttonMainSettings"
        android:layout_below="@+id/buttonMainShoppingList"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_marginLeft="40dp"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold|italic"
        android:layout_marginRight="40dp"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/main_logo2"
        android:layout_below="@+id/buttonMainSettings"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:id="@+id/buttonLogin"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold|italic"
        android:layout_alignTop="@+id/buttonMainSettings"
        android:layout_toRightOf="@+id/buttonMainSettings"
        android:layout_toEndOf="@+id/buttonMainSettings" />


</RelativeLayout>
