<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:background="#ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/txtDepotBarcode"
            android:layout_column="1"
            android:layout_marginTop="3dp"
            android:textSize="10sp"
            android:layout_weight="3"
            android:layout_marginBottom="3dp"
            android:text="@string/product_details" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:background="#ffffff">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:id="@+id/textDepotTitleDescription"
            android:layout_column="0"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textDepotTitle"
            android:layout_column="1"
            android:textSize="12sp"
            android:editable="true"
            android:layout_weight="3" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:background="#ffffff">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/category"
            android:id="@+id/textDepotCategoryDescription"
            android:layout_column="0"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textDepotCategory"
            android:layout_column="1"
            android:textSize="12sp"
            android:layout_weight="3" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:background="#ffffff">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/quantity"
            android:id="@+id/textDepotQuantityDescription"
            android:layout_column="0"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textDepotQuantity"
            android:layout_column="1"
            android:textSize="12sp"
            android:editable="true"
            android:layout_weight="3" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pcs"
            android:id="@+id/textView5"
            android:layout_column="2"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:background="#ffffff">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Stan min:"
            android:id="@+id/textDepotMinDescription"
            android:layout_column="0"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:id="@+id/textDepotMin"
            android:layout_column="1"
            android:textSize="12sp"
            android:editable="true"
            android:layout_weight="3" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pcs"
            android:id="@+id/textView4"
            android:layout_column="2"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="#ffffff">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/description"
            android:id="@+id/textDepotOpisDescription"
            android:layout_column="0"
            android:textSize="12sp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textDepotFullDescription"
            android:layout_column="1"
            android:textSize="12sp"
            android:editable="true"
            android:layout_weight="3" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/actualize"
            android:id="@+id/buttonDepotDetailUpdate"
            android:layout_column="1"
            android:textSize="10sp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="5dp"
            android:layout_weight="3" />
    </TableRow>
</TableLayout>